--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <meta property="og:image" content="https://github.com/Happyma-4869/Happyma-4869.github.io/raw/main/preview.jpg">
 <meta property="og:url" content="https://happyma.top">
 <style>
+/* ---------------- 全局 ---------------- */
 body, html {
   margin:0; padding:0;
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
   color:#333;
   overflow-x:hidden;
-  transition: color 0.5s;
-  scroll-behavior: smooth;
+  scroll-behavior:smooth;
+  transition: color 0.5s, background 0.5s;
 }
 body.dark { color:#eee; background:#000; }
 
@@ -31,6 +32,7 @@ body.dark { color:#eee; background:#000; }
 }
 body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 
+/* 粒子背景 */
 #particles {
   position:fixed; top:0; left:0;
   width:100%; height:100%;
@@ -38,6 +40,7 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
   z-index:0;
 }
 
+/* ---------------- 卡片 ---------------- */
 .card {
   background: rgba(255,255,255,0.65);
   backdrop-filter: blur(20px);
@@ -70,6 +73,7 @@ body.dark .card { background: rgba(40,40,40,0.7); color:#eee; }
 }
 .card .tag:hover { transform:scale(1.1); box-shadow:0 4px 12px rgba(0,0,0,0.2); }
 
+/* ---------------- 头部 ---------------- */
 header { text-align:center; padding:60px 20px 20px; position:relative; z-index:1;}
 header img { width:140px; height:140px; border-radius:50%; border:4px solid rgba(255,255,255,0.8); margin-bottom:20px; transition: transform 0.3s, box-shadow 0.3s; }
 header img:hover {transform:scale(1.1); box-shadow:0 8px 20px rgba(0,0,0,0.2);}
@@ -77,35 +81,40 @@ header h1, header p { color: inherit; margin:0;}
 header h1{margin:10px 0; font-size:36px;}
 header p{font-size:18px; margin:5px 0;}
 
+/* ---------------- 导航 ---------------- */
 nav { margin-top:20px; background:rgba(255,255,255,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:20px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.5); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
 nav a { margin:0 15px; text-decoration:none; font-weight:bold; transition:0.3s;}
 nav a.active { color:#ffeb3b;}
-nav a:hover { color:#ffeb3b; }
-nav a:focus { outline: 2px solid #007aff; outline-offset:2px; }
+nav a:hover, nav a:focus { color:#ffeb3b; outline:none; }
 
-#modeToggle { position:fixed; top:20px; right:20px; padding:8px 15px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border-radius:25px; cursor:pointer; z-index:10; transition:0.3s, transform 0.2s;}
-#modeToggle:hover, #modeToggle:focus { background:linear-gradient(135deg,#007aff,#5ac8fa); transform: scale(1.05); outline:none; }
+/* ---------------- 日夜切换 & 返回顶部 ---------------- */
+#modeToggle, #toTopBtn { cursor:pointer; border-radius:25px; z-index:10; transition:0.3s, transform 0.2s, box-shadow 0.3s;}
+#modeToggle { position:fixed; top:20px; right:20px; padding:8px 15px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white;}
+#modeToggle:hover, #modeToggle:focus { transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.3); outline:none;}
+#toTopBtn { position:fixed; bottom:30px; right:30px; padding:12px 18px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; font-size:16px; display:none;}
+#toTopBtn:hover, #toTopBtn:focus { transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.3); outline:none; }
 
-#toTopBtn { position:fixed; bottom:30px; right:30px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border:none; padding:12px 18px; border-radius:25px; cursor:pointer; font-size:16px; z-index:10; display:none; transition:0.3s, transform 0.2s, box-shadow 0.3s;}
-#toTopBtn:hover, #toTopBtn:focus { background:linear-gradient(135deg,#007aff,#5ac8fa); transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.3); outline:none; }
-
+/* ---------------- 联系我 ---------------- */
 .contact .qr { display:flex; justify-content:center; margin-top:20px; }
 .contact .qr img { width:140px; height:140px; border-radius:25px; border:2px solid #ccc; cursor:pointer; transition:0.3s, transform 0.2s, box-shadow 0.3s;}
 .contact .qr img:hover, .contact .qr img:focus { transform:scale(1.1); box-shadow:0 8px 20px rgba(0,0,0,0.3); outline:none; }
 
+/* ---------------- 弹窗 ---------------- */
 #qrModal { display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background:rgba(255,255,255,0.3); backdrop-filter:blur(15px); justify-content:center; align-items:center; border-radius:25px;}
 #qrModal img { max-width:300px; border-radius:25px; border:3px solid #fff;}
 #qrModal.show { display:flex; }
 
+/* ---------------- 分区 ---------------- */
 section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
 section h2 { font-size:28px; color:#007aff; margin-bottom:30px; }
 
 textarea, input[type="date"] { width:90%; padding:10px; border-radius:20px; border:none; box-shadow: inset 0 2px 5px rgba(0,0,0,0.1); resize:none; margin:0 auto; display:block; text-align:left;}
 .diary-actions { display:flex; justify-content:center; gap:10px; margin-top:10px; }
 .diary-actions button, #addDiaryBtn { padding:8px 12px; cursor:pointer; border:none; border-radius:25px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; font-weight:bold; transition:0.3s, transform 0.2s, box-shadow 0.3s;}
-.diary-actions button:hover, .diary-actions button:focus, #addDiaryBtn:hover, #addDiaryBtn:focus { background:linear-gradient(135deg,#007aff,#5ac8fa); transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.3); outline:none; }
+.diary-actions button:hover, .diary-actions button:focus, #addDiaryBtn:hover, #addDiaryBtn:focus { transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.3); outline:none; }
 
+/* ---------------- 响应式 ---------------- */
 @media(max-width:400px){ header img{width:80px;height:80px;} header h1{font-size:24px;} header p{font-size:14px;} .card{width:90%;padding:20px;margin-bottom:30px;} nav a{margin:0 5px;font-size:12px;} #modeToggle,#toTopBtn{padding:6px 12px;font-size:14px;} }
 @media(min-width:401px) and (max-width:768px){ header img{width:100px;height:100px;} header h1{font-size:28px;} header p{font-size:16px;} .card{width:80%;padding:22px;margin-bottom:35px;} nav a{margin:0 10px;font-size:14px;} }
 @media(min-width:769px){ header img{width:140px;height:140px;} header h1{font-size:36px;} header p{font-size:18px;} .card{width:320px;padding:25px;margin-bottom:40px;} nav a{margin:0 15px;font-size:16px;} }
@@ -136,6 +145,13 @@ textarea, input[type="date"] { width:90%; padding:10px; border-radius:20px; bord
   <h2>关于我</h2>
   <div class="card show">
     <p>Hi 我是happy  我来自河南郑州市  目前是郑州市西亚斯大一学生  在此我想分享我的生活</p>
+    <div class="tags">
+      <span class="tag">学习</span>
+      <span class="tag">游戏</span>
+      <span class="tag">音乐</span>
+      <span class="tag">编程</span>
+    </div>
+  </div>
 </section>
 
 <section id="diary">
@@ -163,8 +179,116 @@ textarea, input[type="date"] { width:90%; padding:10px; border-radius:20px; bord
 <div id="qrModal"><img src="https://github.com/Happyma-4869/Happyma-4869.github.io/blob/main/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20251207233522_10_79.jpg?raw=true" alt="微信二维码大图"></div>
 
 <script>
-// 日记、夜间模式、返回顶部、粒子、卡片光晕与滚动动画脚本保持不变
+// ---------------- 日记 ----------------
+const diaryList=document.getElementById('diaryList');
+const addDiaryBtn=document.getElementById('addDiaryBtn');
+const diaryDate=document.getElementById('diaryDate');
+const diaryContent=document.getElementById('diaryContent');
+let diaries=JSON.parse(localStorage.getItem('diaries'))||[{date:'2025-12-08', content:'今天是我初次创建我的个人网站  目前还在测试中  以后我会逐步完善耶✌'}];
+function renderDiaries(){
+  diaryList.innerHTML='';
+  diaries.forEach((d,i)=>{
+    const card=document.createElement('div');
+    card.className='card show';
+    card.innerHTML=`<p><strong>${d.date}</strong></p>
+                    <p>${d.content}</p>
+                    <div class="diary-actions">
+                      <button onclick="editDiary(${i})">编辑</button>
+                      <button onclick="deleteDiary(${i})">删除</button>
+                    </div>`;
+    diaryList.appendChild(card);
+  });
+  localStorage.setItem('diaries', JSON.stringify(diaries));
+}
+renderDiaries();
+addDiaryBtn.addEventListener('click',()=>{
+  const dateVal=diaryDate.value||new Date().toISOString().split('T')[0];
+  const contentVal=diaryContent.value.trim();
+  if(!contentVal){ alert('请填写内容'); return; }
+  diaries.unshift({date:dateVal, content:contentVal});
+  diaryDate.value=''; diaryContent.value='';
+  renderDiaries();
+});
+function deleteDiary(i){ diaries.splice(i,1); renderDiaries(); }
+function editDiary(i){
+  const newContent=prompt('请输入新的日记内容：', diaries[i].content);
+  if(newContent===null) return;
+  diaries[i].content=newContent;
+  renderDiaries();
+}
+
+// ---------------- 日夜模式 ----------------
+const modeToggle=document.getElementById('modeToggle');
+modeToggle.addEventListener('click',()=>{
+    document.body.classList.toggle('dark');
+    particlesArray.forEach(p=>{
+        p.color=document.body.classList.contains('dark')?'rgba(255,255,255,0.9)':'rgba(255,255,255,0.3)';
+    });
+    initParticles();
+});
+
+// ---------------- 返回顶部 ----------------
+const toTopBtn=document.getElementById('toTopBtn');
+window.addEventListener('scroll',()=>{ toTopBtn.style.display=(window.scrollY>200)?'block':'none'; });
+toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth'}); });
+
+// ---------------- 粒子动画 ----------------
+const canvas=document.getElementById('particles');
+const ctx=canvas.getContext('2d');
+let particlesArray=[];
+let mouse={x:null,y:null};
+window.addEventListener('mousemove', e=>{ mouse.x=e.x; mouse.y=e.y; });
+function resizeCanvas(){ canvas.width=window.innerWidth; canvas.height=window.innerHeight; }
+window.addEventListener('resize', resizeCanvas);
+resizeCanvas();
+
+class Particle{
+  constructor(){
+    this.originX=Math.random()*canvas.width;
+    this.originY=Math.random()*canvas.height;
+    this.radius=Math.random()*2+1.5;
+    this.angle=Math.random()*Math.PI*2;
+    this.orbit=Math.random()*20+10;
+    this.speed=(Math.random()*0.01)+0.005;
+    this.color=document.body.classList.contains('dark')?'rgba(255,255,255,0.9)':'rgba(255,255,255,0.3)';
+  }
+  update(){
+    this.angle+=this.speed;
+    this.x=this.originX+Math.cos(this.angle)*this.orbit;
+    this.y=this.originY+Math.sin(this.angle)*this.orbit;
+    let dx=mouse.x-this.x, dy=mouse.y-this.y, dist=Math.sqrt(dx*dx+dy*dy);
+    if(dist<100){ this.x+=dx*0.002; this.y+=dy*0.002; }
+    if(this.x>canvas.width)this.originX=0;
+    if(this.x<0)this.originX=canvas.width;
+    if(this.y>canvas.height)this.originY=0;
+    if(this.y<0)this.originY=canvas.height;
+  }
+  draw(){ ctx.beginPath(); ctx.arc(this.x,this.y,this.radius,0,Math.PI*2); ctx.fillStyle=this.color; ctx.fill(); }
+}
+
+function initParticles(){ particlesArray=[]; for(let i=0;i<150;i++) particlesArray.push(new Particle()); }
+initParticles();
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  particlesArray.forEach(p=>{ p.update(); p.draw(); });
+  requestAnimationFrame(animate);
+}
+animate();
+
+// ---------------- 卡片滚动淡入 ----------------
+const cards=document.querySelectorAll('.card');
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){ entry.target.classList.add('show'); }
+  });
+},{threshold:0.1});
+cards.forEach(card=>observer.observe(card));
+
+// ---------------- 二维码弹窗 ----------------
+const qrImg=document.getElementById('qrImg'), qrModal=document.getElementById('qrModal');
+qrImg.addEventListener('click',()=>qrModal.classList.add('show'));
+qrModal.addEventListener('click',()=>qrModal.classList.remove('show'));
 </script>
 </body>
 </html>
-
