--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ body, html {
   scroll-behavior: smooth;
 }
 body.dark { color:#eee; }
+a { text-decoration:none; color:inherit; }
+section { position:relative; z-index:2; }
 
 /* ---------------- 背景视频 ---------------- */
 #bgVideo {
@@ -22,9 +24,22 @@ body.dark { color:#eee; }
   width:100%; height:100%;
   object-fit:cover;
   z-index:0;
+  opacity:0;
+  animation: fadeIn 1s forwards;
   transition: filter 0.5s;
 }
-body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
+body.dark #bgVideo { filter: brightness(40%) contrast(110%) sepia(10%) saturate(120%); }
+
+@keyframes fadeIn { to { opacity:1; } }
+
+/* ---------------- 半透明夜间滤镜 ---------------- */
+body.dark::before {
+  content:'';
+  position:fixed; top:0; left:0; width:100%; height:100%;
+  background:rgba(0,0,40,0.25);
+  z-index:1;
+  pointer-events:none;
+}
 
 /* ---------------- 粒子画布 ---------------- */
 #particles {
@@ -36,10 +51,10 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 
 /* ---------------- 苹果风格卡片 ---------------- */
 .card {
-  background: rgba(255,255,255,0.6);
+  background: linear-gradient(to bottom right, rgba(255,255,255,0.6), rgba(245,245,245,0.4));
   backdrop-filter: blur(20px);
   border-radius: 25px;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
   padding:25px 20px;
   display:flex;
   flex-direction:column;
@@ -52,7 +67,7 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%); }
 }
 .card.show { opacity:1; transform: translateY(0); }
 .card:hover { transform: translateY(-5px); box-shadow: 0 16px 40px rgba(0,0,0,0.15); }
-body.dark .card { background: rgba(40,40,40,0.7); color:#eee; box-shadow:0 8px 30px rgba(255,255,255,0.1); }
+body.dark .card { background: rgba(40,40,40,0.85); color:#fff; box-shadow:0 12px 30px rgba(255,255,255,0.1); }
 
 .card .tags { margin-top:10px; text-align:center; }
 .card .tag {
@@ -68,7 +83,7 @@ body.dark .card { background: rgba(40,40,40,0.7); color:#eee; box-shadow:0 8px 3
 .card .tag:hover { transform:scale(1.1); box-shadow:0 4px 12px rgba(0,0,0,0.2); }
 
 /* ---------------- 头部 ---------------- */
-header { text-align:center; padding:60px 20px 20px; position:relative; z-index:1;}
+header { text-align:center; padding:60px 20px 20px; position:relative; z-index:2;}
 header img { width:140px; height:140px; border-radius:50%; border:4px solid rgba(255,255,255,0.8); margin-bottom:20px; transition: transform 0.3s, box-shadow 0.3s; }
 header img:hover {transform:scale(1.1); box-shadow:0 8px 20px rgba(0,0,0,0.2);}
 header h1, header p { color: inherit; margin:0;}
@@ -78,7 +93,7 @@ header p{font-size:18px; margin:5px 0;}
 /* ---------------- 导航 ---------------- */
 nav { margin-top:20px; background:rgba(255,255,255,0.2); padding:10px 0; position:sticky; top:0; z-index:5; border-radius:20px; transition:0.3s;}
 nav.scrolled { background:rgba(0,0,0,0.5); box-shadow:0 4px 10px rgba(0,0,0,0.3);}
-nav a { margin:0 15px; text-decoration:none; font-weight:bold; transition:0.3s;}
+nav a { margin:0 15px; font-weight:bold; transition:0.3s;}
 nav a.active { color:#ffeb3b;}
 nav a:hover { color:#ffeb3b; }
 
@@ -89,6 +104,7 @@ nav a:hover { color:#ffeb3b; }
 /* ---------------- 返回顶部 ---------------- */
 #toTopBtn { position:fixed; bottom:30px; right:30px; background:linear-gradient(135deg,#5ac8fa,#007aff); color:white; border:none; padding:12px 18px; border-radius:25px; cursor:pointer; font-size:16px; z-index:10; display:none; transition:0.3s, transform 0.2s, box-shadow 0.3s;}
 #toTopBtn:hover { background:linear-gradient(135deg,#007aff,#5ac8fa); transform:scale(1.05); box-shadow:0 8px 20px rgba(0,0,0,0.3); }
+#toTopBtn:active { transform:scale(0.95); box-shadow:0 6px 18px rgba(0,0,0,0.3); }
 
 /* ---------------- 联系我 ---------------- */
 .contact .qr { display:flex; justify-content:center; margin-top:20px; }
@@ -97,11 +113,11 @@ nav a:hover { color:#ffeb3b; }
 
 /* ---------------- 弹窗 ---------------- */
 #qrModal { display:none; position:fixed; z-index:10; left:0; top:0; width:100%; height:100%; background:rgba(255,255,255,0.3); backdrop-filter:blur(15px); justify-content:center; align-items:center; border-radius:25px;}
-#qrModal img { max-width:300px; border-radius:25px; border:3px solid #fff;}
+#qrModal img { max-width:300px; border-radius:25px; border:3px solid #fff; transition: transform 0.3s;}
 #qrModal.show { display:flex; }
 
 /* ---------------- 分区 ---------------- */
-section { padding:60px 20px; text-align:center; position:relative; z-index:1; }
+section { padding:60px 20px; text-align:center; }
 section h2 { font-size:28px; color:#007aff; margin-bottom:30px; }
 
 textarea, input[type="date"] {
@@ -122,7 +138,7 @@ textarea, input[type="date"] {
   header p { font-size:14px; }
   .card { width:90%; padding:20px; margin-bottom:30px; }
   nav a { margin:0 5px; font-size:12px; }
-  #modeToggle, #toTopBtn { padding:6px 12px; font-size:14px; }
+  #modeToggle, #toTopBtn, button{ padding:6px 12px; font-size:14px; }
 }
 @media (min-width:401px) and (max-width:768px){
   header img { width:100px; height:100px; }
@@ -306,16 +322,18 @@ animateParticles();
 // ---------------- 微信二维码弹窗 ----------------
 const qrImg=document.getElementById('qrImg');
 const qrModal=document.getElementById('qrModal');
-qrImg.addEventListener('click',()=>qrModal.classList.add('show'));
-qrModal.addEventListener('click',()=>qrModal.classList.remove('show'));
+qrImg.addEventListener('click',()=>{ qrModal.classList.add('show'); qrModal.querySelector('img').style.transform='scale(1.05)'; });
+qrModal.addEventListener('click',()=>{ qrModal.classList.remove('show'); qrModal.querySelector('img').style.transform='scale(1)'; });
 
-// ---------------- 卡片滚动动画 + 光晕 & 背景亮度 ----------------
+// ---------------- 卡片滚动动画 ----------------
 function showOnScroll() {
     const cards = document.querySelectorAll('.card');
     const windowBottom = window.innerHeight * 0.85;
-    cards.forEach(card => {
+    cards.forEach((card, i) => {
         const rect = card.getBoundingClientRect();
-        if (rect.top < windowBottom) card.classList.add('show');
+        if (rect.top < windowBottom) {
+            setTimeout(()=>card.classList.add('show'), i*100);
+        }
     });
 }
 window.addEventListener('scroll', showOnScroll);
