--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@ body.dark::before{content:'';position:fixed;top:0;left:0;width:100%;height:100%;
 .card.show{opacity:1;transform:translateY(0);}
 .card:hover{transform:translateY(-5px);box-shadow:0 16px 40px rgba(0,0,0,0.15);}
 body.dark .card{background:var(--dark-bg);color:#fff;box-shadow:0 12px 30px var(--dark-card-shadow);}
-.card .tags{margin-top:10px;text-align:center;}
-.card .tag{display:inline-block;background:linear-gradient(45deg,var(--primary-light),var(--primary));color:white;padding:5px 10px;margin:3px;border-radius:15px;font-size:12px;transition: transform 0.2s, box-shadow 0.3s;}
-.card .tag:hover{transform:scale(1.1);box-shadow:0 4px 12px rgba(0,0,0,0.2);}
 header{text-align:center;padding:60px 20px 20px;position:relative;z-index:2;}
 header img{width:140px;height:140px;border-radius:50%;border:4px solid rgba(255,255,255,0.8);margin-bottom:20px;transition: transform 0.3s, box-shadow 0.3s;}
 header img:hover{transform:scale(1.1);box-shadow:0 8px 20px rgba(0,0,0,0.2);}
@@ -55,12 +52,6 @@ nav a:hover{color:#ffeb3b;}
 #qrModal.show{display:flex;}
 section{padding:60px 20px;text-align:center;}
 section h2{font-size:28px;color:var(--primary);margin-bottom:30px;}
-textarea,input[type="date"]{width:90%;padding:10px;border-radius:20px;border:none;box-shadow: inset 0 2px 5px rgba(0,0,0,0.1);resize:none;margin:0 auto;display:block;text-align:left;}
-.diary-actions{display:flex;justify-content:center;gap:10px;margin-top:10px;}
-.diary-actions button,#addDiaryBtn{padding:8px 12px;cursor:pointer;border:none;border-radius:25px;background:linear-gradient(135deg,var(--primary-light),var(--primary));color:white;font-weight:bold;transition:0.3s, transform 0.2s, box-shadow 0.3s;}
-.diary-actions button:hover,#addDiaryBtn:hover{background:linear-gradient(135deg,var(--primary),var(--primary-light));transform:scale(1.05);box-shadow:0 8px 20px rgba(0,0,0,0.3);}
-#comments{padding-bottom:60px;}
-#vcomments{margin-top:20px;}
 @media(max-width:400px){header img{width:80px;height:80px;} header h1{font-size:24px;} header p{font-size:14px;} .card{width:90%;padding:20px;margin-bottom:30px;} nav a{margin:0 5px;font-size:12px;} #modeToggle,#toTopBtn,#visitCounter,button{padding:6px 12px;font-size:14px;}}
 @media(min-width:401px) and (max-width:768px){header img{width:100px;height:100px;} header h1{font-size:28px;} header p{font-size:16px;} .card{width:80%;padding:22px;margin-bottom:35px;} nav a{margin:0 10px;font-size:14px;}}
 @media(min-width:769px){header img{width:140px;height:140px;} header h1{font-size:36px;} header p{font-size:18px;} .card{width:320px;padding:25px;margin-bottom:40px;} nav a{margin:0 15px;font-size:16px;}}
@@ -73,7 +64,7 @@ textarea,input[type="date"]{width:90%;padding:10px;border-radius:20px;border:non
 </video>
 <canvas id="particles"></canvas>
 
-<div id="visitCounter">浏览量: <span id="busuanzi_value_page_pv"></span></div>
+<div id="visitCounter">浏览量: <span id="busuanzi_value_page_pv"></span> | 评论: <span id="commentCount">0</span></div>
 <div id="modeToggle">🌙 日/夜切换</div>
 <button id="toTopBtn">⬆️ 顶部</button>
 
@@ -175,19 +166,31 @@ window.addEventListener('load',showOnScroll);
 const sections=document.querySelectorAll('section');const navLinks=document.querySelectorAll('nav a');
 window.addEventListener('scroll',()=>{let scrollPos=window.scrollY+100;sections.forEach((sec,i)=>{if(scrollPos>=sec.offsetTop&&scrollPos<sec.offsetTop+sec.offsetHeight){navLinks.forEach(a=>a.classList.remove('active'));navLinks[i].classList.add('active');}});});
 
-// ---------------- Valine 评论 ----------------
-new Valine({
+// ---------------- Valine 匿名评论 + 自动刷新 + 评论数量 ----------------
+const v = new Valine({
   el:'#vcomments',
   appId:'fuokp60W4AkLxxWWHvQE1aN6-gzGzoHsz',
   appKey:'AbvqmSqV8Cv8XChNG7ZlSsr2',
   placeholder:'留下你的评论吧~',
   path: window.location.pathname,
-  visitor:true,
-  avatar:'robohash',
+  avatar:'mp',
+  visitor:false,
   pageSize:10,
-  verify:false
+  verify:false,
+  meta:[],
+  defaultNick:'匿名',
+  afterSubmit: function(){
+    alert('提交成功！评论已刷新');
+    v.render(); 
+    updateCommentCount();
+  }
 });
-</script>
 
+const commentCountSpan = document.getElementById('commentCount');
+function updateCommentCount(){
+  v.getCommentsCount().then(count=>{commentCountSpan.textContent = count;});
+}
+updateCommentCount();
+</script>
 </body>
 </html>
