--- a/index.html
+++ b/index.html
@@ -34,20 +34,12 @@ body.dark #bgVideo { filter: brightness(40%) contrast(110%) sepia(10%) saturate(
 
 /* ---------------- 半透明夜间滤镜 ---------------- */
 body.dark::before {
-  content:'';
-  position:fixed; top:0; left:0; width:100%; height:100%;
-  background:rgba(0,0,40,0.25);
-  z-index:1;
-  pointer-events:none;
+  content:''; position:fixed; top:0; left:0; width:100%; height:100%;
+  background:rgba(0,0,40,0.25); z-index:1; pointer-events:none;
 }
 
 /* ---------------- 粒子画布 ---------------- */
-#particles {
-  position:fixed; top:0; left:0;
-  width:100%; height:100%;
-  pointer-events:none;
-  z-index:0;
-}
+#particles { position:fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:0; }
 
 /* ---------------- 苹果风格卡片 ---------------- */
 .card {
@@ -225,14 +217,8 @@ const diaryDate = document.getElementById('diaryDate');
 const diaryContent = document.getElementById('diaryContent');
 const diaryImg = document.getElementById('diaryImg');
 
-let imgData = '';
-diaryImg.addEventListener('change', e => {
-    const file = e.target.files[0];
-    if(!file) return;
-    const reader = new FileReader();
-    reader.onload = function(ev){ imgData = ev.target.result; }
-    reader.readAsDataURL(file);
-});
+let selectedFile = null;
+diaryImg.addEventListener('change', e => { selectedFile = e.target.files[0]; });
 
 let diaries = [];
 function fetchDiariesFromCloud(){
@@ -243,7 +229,7 @@ function fetchDiariesFromCloud(){
             id: r.id,
             date: r.get('date'),
             content: r.get('content'),
-            img: r.get('img')
+            img: r.get('img') ? r.get('img').url() : ''
         }));
         renderDiaries();
     });
@@ -253,11 +239,22 @@ function saveDiaryToCloud(diary){
     const diaryObj = new DiaryCloud();
     diaryObj.set('date', diary.date);
     diaryObj.set('content', diary.content);
-    if(diary.img) diaryObj.set('img', diary.img);
-    diaryObj.save().then(res => {
-        diary.id = res.id;
-        fetchDiariesFromCloud();
-    });
+
+    if(diary.file){
+        const avFile = new AV.File(diary.file.name, diary.file);
+        avFile.save().then(file => {
+            diaryObj.set('img', file);
+            return diaryObj.save();
+        }).then(res => {
+            diary.id = res.id;
+            fetchDiariesFromCloud();
+        });
+    } else {
+        diaryObj.save().then(res => {
+            diary.id = res.id;
+            fetchDiariesFromCloud();
+        });
+    }
 }
 
 function renderDiaries(){
@@ -281,9 +278,9 @@ addDiaryBtn.addEventListener('click',()=>{
     const dateVal = diaryDate.value || new Date().toISOString().split('T')[0];
     const contentVal = diaryContent.value.trim();
     if(!contentVal){ alert('请填写内容'); return; }
-    const newDiary = {date: dateVal, content: contentVal, img: imgData};
+    const newDiary = {date: dateVal, content: contentVal, file: selectedFile};
     diaries.unshift(newDiary);
-    diaryDate.value=''; diaryContent.value=''; diaryImg.value=''; imgData='';
+    diaryDate.value=''; diaryContent.value=''; diaryImg.value=''; selectedFile=null;
     renderDiaries();
     saveDiaryToCloud(newDiary);
 });
@@ -291,10 +288,7 @@ addDiaryBtn.addEventListener('click',()=>{
 function deleteDiary(i){
     if(!diaries[i].id){ diaries.splice(i,1); renderDiaries(); return; }
     const obj = AV.Object.createWithoutData('Diary', diaries[i].id);
-    obj.destroy().then(()=>{
-        diaries.splice(i,1);
-        renderDiaries();
-    });
+    obj.destroy().then(()=>{ diaries.splice(i,1); renderDiaries(); });
 }
 
 function editDiary(i){
@@ -311,10 +305,7 @@ function editDiary(i){
 
 // ---------------- 日夜模式 ----------------
 const modeToggle = document.getElementById('modeToggle');
-modeToggle.addEventListener('click',()=>{
-    document.body.classList.toggle('dark');
-    initParticles();
-});
+modeToggle.addEventListener('click',()=>{ document.body.classList.toggle('dark'); initParticles(); });
 
 // ---------------- 返回顶部 ----------------
 const toTopBtn = document.getElementById('toTopBtn');
@@ -324,21 +315,16 @@ toTopBtn.addEventListener('click',()=>{ window.scrollTo({top:0, behavior:'smooth
 // ---------------- 粒子动画 ----------------
 const canvas=document.getElementById('particles');
 const ctx=canvas.getContext('2d');
-let particlesArray=[];
-let mouse={x:null,y:null};
+let particlesArray=[]; let mouse={x:null,y:null};
 window.addEventListener('mousemove', e=>{ mouse.x=e.x; mouse.y=e.y; });
 function resizeCanvas(){ canvas.width=window.innerWidth; canvas.height=window.innerHeight; }
-window.addEventListener('resize', resizeCanvas);
-resizeCanvas();
+window.addEventListener('resize', resizeCanvas); resizeCanvas();
 
 class Particle{
   constructor(){
-    this.originX=Math.random()*canvas.width;
-    this.originY=Math.random()*canvas.height;
-    this.radius=Math.random()*2+1.5;
-    this.angle=Math.random()*Math.PI*2;
-    this.orbit=Math.random()*20+10;
-    this.speed=(Math.random()*0.01)+0.005;
+    this.originX=Math.random()*canvas.width; this.originY=Math.random()*canvas.height;
+    this.radius=Math.random()*2+1.5; this.angle=Math.random()*Math.PI*2;
+    this.orbit=Math.random()*20+10; this.speed=(Math.random()*0.01)+0.005;
     this.color=document.body.classList.contains('dark')?'rgba(255,255,255,0.9)':'rgba(255,255,255,0.3)';
   }
   update(){
@@ -348,28 +334,11 @@ class Particle{
     let dx=mouse.x-this.x, dy=mouse.y-this.y, dist=Math.sqrt(dx*dx+dy*dy);
     if(dist<100){ this.x+=dx*0.002; this.y+=dy*0.002; }
   }
-  draw(){
-    ctx.fillStyle=this.color;
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,this.radius,0,Math.PI*2);
-    ctx.fill();
-  }
+  draw(){ ctx.fillStyle=this.color; ctx.beginPath(); ctx.arc(this.x,this.y,this.radius,0,Math.PI*2); ctx.fill(); }
 }
-
-function initParticles(){
-  particlesArray=[];
-  if(!document.body.classList.contains('dark')) return;
-  let count=90;
-  for(let i=0;i<count;i++){ particlesArray.push(new Particle()); }
-}
-
-function animateParticles(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  particlesArray.forEach(p=>{p.update();p.draw();});
-  requestAnimationFrame(animateParticles);
-}
-initParticles();
-animateParticles();
+function initParticles(){ particlesArray=[]; if(!document.body.classList.contains('dark')) return; let count=90; for(let i=0;i<count;i++){ particlesArray.push(new Particle()); } }
+function animateParticles(){ ctx.clearRect(0,0,canvas.width,canvas.height); particlesArray.forEach(p=>{p.update();p.draw();}); requestAnimationFrame(animateParticles); }
+initParticles(); animateParticles();
 
 // ---------------- 微信二维码弹窗 ----------------
 const qrImg=document.getElementById('qrImg');
@@ -383,9 +352,7 @@ function showOnScroll() {
     const windowBottom = window.innerHeight * 0.85;
     cards.forEach((card,i)=>{
         const rect = card.getBoundingClientRect();
-        if(rect.top < windowBottom){
-            setTimeout(()=>card.classList.add('show'), i*100);
-        }
+        if(rect.top < windowBottom){ setTimeout(()=>card.classList.add('show'), i*100); }
     });
 }
 window.addEventListener('scroll', showOnScroll);
